--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Assign PR Reviewer & Assignee
-        uses: SeongHo5/auto-assign-pr@v0.0.1-SNAPSHOT
+        uses: SeongHo5/auto-assign-pr@v0.0.2
         with:
           configuration-path: .github/auto-assign.yml
