--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -14,3 +14,5 @@ jobs:
         uses: SeongHo5/auto-assign-pr@v0.0.3
         with:
           configuration-path: .github/auto-assign.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUBS_TOKEN }}
