--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           configuration-path: .github/auto-assign.yml
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUBS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
