--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "auto-assign-pr",
-  "version": "0.0.3",
+  "name": "pr-buddy",
+  "version": "1.0",
   "description": "PR 리뷰어와 담당자를 자동으로 지정합니다.",
   "main": "src/main.ts",
   "scripts": {
