fix: actions 입력값 필드 이름 수정

--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ inputs:
     description: 'A token for the repo'
     default: ${{ github.token }}
     required: false
-  configuration-path:
+  config:
     description: 'The path to the configuration file.'
     required: true
     default: '.github/auto-assign.yml'
